# webcam-background-remover

./: .clang-format  .gitignore  CMakeLists.txt  README.md  org.kde.tutorial.desktop
assets/: video.webm
src/: CMakeLists.txt  Main.qml  frameprocessor.h  main.cpp  videoframeprovider.cpp  videoframeprovider.h  virtualcameramanager.cpp  virtualcameramanager.h  virtualcameramodel.cpp  virtualcameramodel.h
src/components/: AddVirtualCameraDialog.qml  BackgroundImageGallery.qml  CMakeLists.txt  CameraPage.qml  CamerasDrawer.qml  GalleryImageCard.qml  VideoSourcesView.qml
